initial style guide

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, maiores voluptatibus. Tempora consequatur ex quidem, similique sapiente tempore! Itaque nostrum placeat quia sapiente hic accusamus numquam rem nulla earum consequatur!
+    </p>
 </body>
 </html>
