--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
 </head>
 
 <body>
-    
+    <!-- bg - backgroud-color -->
+    <div class="bg-surface-color">
+        <nav class="container">
+            <!-- # não leva o link a nenhum lugar -->
+            <a href="#" id="logo">
+                <img src="assets/Logo.svg" alt="Logomarca">
+            </a>
+
+            <ul id="primary-menu">
+                <li>
+                    <a href="#">
+                        <img src="assets/icone/MagnifyingGlass.svg" alt="ícone de lupa">
+                    </a>
+                </li>
+                <!-- 'li*3>a' para chamar várias listas seguidas e aconradas-->
+                <li><a href="#">Explorar</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#">
+                        <!-- imagem de perfil -->
+                        <img src="assets/Profile pic.jpg" alt="Imagem de perfil de Isabela Torres">
+                    </a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 
 </html>
