--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
                     </a></li>
             </ul>
         </nav>
+
+        <header>
+            <div class="container">
+                <div id="profile">
+                    <img src="assets/Profile pic.jpg" alt="Imagem de perfil de Isabela Torres">
+                    <div>
+                        <h1>Isabela Torres</h1>
+                        <p>
+                            Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
+                            Aqui compartilho as histórias registradas em cada <br>
+                            clique, explorando cantinhos fascinantes do nosso <br> 
+                            planeta a partir da movimentada cidade de São <br> 
+                            Paulo. 🏙️📸
+                        </p>
+                    </div>
+                </div>
+
+                <ul id="info">
+                    <li>
+                        <img src="assets/icone/MapPin.svg" alt="Icone de mapa">
+                        <span>São Paulo, Brazil</span>
+                    </li>
+                    <li>
+                        <img src="assets/icone/AirplaneTilt.svg" alt="icone de aviao">
+                        <span>37 países</span>
+                    </li>
+                    <li>
+                        <img src="assets/icone/Image.svg" alt="Icone de imagem">
+                        <span>240 fotos</span>
+                    </li>
+                </ul>
+            </div>
+        </header>
     </div>
 </body>
 
