--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <li><a href="#">Explorar</a></li>
                 <li><a href="#">Minhas viagens</a></li>
                 <li><a href="#">
-                        <!-- imagem de perfil -->
-                        <img src="assets/Profile pic.jpg" alt="Imagem de perfil de Isabela Torres">
-                    </a></li>
+                    <!-- imagem de perfil -->
+                    <img src="assets/Profile pic.jpg" alt="Imagem de perfil de Isabela Torres">
+                </a></li>
             </ul>
         </nav>
 
@@ -47,8 +47,8 @@
                         <p>
                             Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
                             Aqui compartilho as histórias registradas em cada <br>
-                            clique, explorando cantinhos fascinantes do nosso <br> 
-                            planeta a partir da movimentada cidade de São <br> 
+                            clique, explorando cantinhos fascinantes do nosso <br>
+                            planeta a partir da movimentada cidade de São <br>
                             Paulo. 🏙️📸
                         </p>
                     </div>
@@ -71,6 +71,20 @@
             </div>
         </header>
     </div>
+    <main class="container">
+        <img src="assets/imagens/Image 01.png" alt="...">
+        <img src="assets/imagens/Image 02.png" alt="...">
+        <img src="assets/imagens/Image 03.png" alt="...">
+        <img src="assets/imagens/Image 04.png" alt="...">
+        <img src="assets/imagens/Image 05.png" alt="...">
+        <img src="assets/imagens/Image 06.png" alt="...">
+        <img src="assets/imagens/Image 07.png" alt="...">
+        <img src="assets/imagens/Image 08.png" alt="...">
+        <img src="assets/imagens/Image 09.png" alt="...">
+        <img src="assets/imagens/Image 10.png" alt="...">
+        <img src="assets/imagens/Image 11.png" alt="...">
+        <img src="assets/imagens/Image 12.png" alt="...">
+    </main>
 </body>
 
 </html>
